--- a/app/views/story_sets/story.html.erb
+++ b/app/views/story_sets/story.html.erb
@@ -21,7 +21,7 @@
       </div>
 
       <div class="btn-area">
-        <a class="btn btn-success" href="/kpi_entries/analyse">publish</a>
+        <a class="btn btn-success" href="/kpi_entries/analyse/<%= @story_set.id%>">publish</a>
       </div>
     </div>
     <div class="participate">
