--- a/app/views/kpi_entries/analyse.html.erb
+++ b/app/views/kpi_entries/analyse.html.erb
@@ -366,9 +366,9 @@
                     story.story_set_id = $(this).attr("value");
                     MANAGE.story.create(story,function(data){
                         if(data.result){
-
+                            window.location.href = '/story_sets/'+data.content.story_set_id+'/story';
                         }else{
-
+                            MessageBox(data.content,'top','warning');
                         }
                     });
                 })
