--- a/app/views/kpis/_access.html.erb
+++ b/app/views/kpis/_access.html.erb
@@ -25,6 +25,7 @@
             <% else %>
                 <td><%= t 'manage.kpi.not_calculate_type' %></td>
             <% end %>
+            <td><a class="btn btn-success" href="/kpi_subscribes/new/<%= kpi.id%>"><%= t 'subscription.add'%></a></td>
           </tr>
           <tr>
             <td title='<%= kpi.description %>'><%= kpi.description %></td>
@@ -34,6 +35,7 @@
             <td><%= t 'manage.kpi.target' %></td>
             <td><%= t 'manage.kpi.target_min' %></td>
             <td><%= t 'manage.kpi.is_calculate_type' %></td>
+            <td></td>
           </tr>
         </table>
         <div class="attribute-position" type="myKPI">
