--- a/app/views/kpi_entries/analyse.html.erb
+++ b/app/views/kpi_entries/analyse.html.erb
@@ -340,6 +340,12 @@
                     var story = prepare_for_create_story();
 
                     MANAGE.story.create(story,function(data){
+                        if(data.result){
+                            window.location.href = "/story_sets/"+data.content.story_set_id+"/story";
+                        }else
+                        {
+                            MessageBox(data.content,'top','warning');
+                        }
 
                     });
                 })
@@ -353,7 +359,12 @@
                         if(data.result){
                             story.story_set_id = data.content.id;
                             MANAGE.story.create(story,function(data){
-
+                                if(data.result){
+                                    window.location.href = "/story_sets/"+data.content.story_set_id+"/story";
+                                }else
+                                {
+                                    MessageBox(data.content,'top','warning');
+                                }
                             })
                         }
                         else{
