--- a/app/assets/stylesheets/story_sets.css.scss
+++ b/app/assets/stylesheets/story_sets.css.scss
@@ -242,6 +242,7 @@
         top:0px;
         padding-top:8px;
         font-size:18px;
+        pointer-events:none;
       }
     }
     .content{
