--- a/app/views/kpi_subscribes/_subscribes.html.erb
+++ b/app/views/kpi_subscribes/_subscribes.html.erb
@@ -41,12 +41,14 @@
                 <% end %>
               </div>
             </td>
+            <td><a class="btn btn-danger"><异常></异常></a></td>
           </tr>
           <tr>
             <td><%= t 'subscription.kpi'%></td>
             <td><%= t 'subscription.add-sub.department'%></td>
             <td><%= t 'subscription.add-sub.time'%></td>
             <td><%= t 'subscription.add-sub.alert_type'%></td>
+            <td></td>
           </tr>
         </table>
       </li>
