--- a/app/views/kpi_subscribes/mine.html.erb
+++ b/app/views/kpi_subscribes/mine.html.erb
@@ -7,8 +7,8 @@
       </p>
     </div>
     <div class="manage-left-content" id="manage-left-content">
-      <%= render :partial => 'kpi_categories/left_readonly_menu' %>
-      <div class="manage-right-content" id="manage-right-content">
+
+      <div class="manage-right-content" id="manage-right-content" style="left:0px;">
         <div class="manage-btn-group" id="manage-btn-group">
           <p id="manage-edit-target"></p>
           <i class="icon-pencil"></i>
