--- a/app/views/story_sets/story.html.erb
+++ b/app/views/story_sets/story.html.erb
@@ -72,4 +72,19 @@
     $(function () {
         init_story_page();
     });
+//    $("document").ready(function(){
+//        $("body")
+//                .on("click","#comments-btn",function(event){
+//                    stop_propagation(event);
+//                    var state=$(this).attr("state");
+//                    if(state=="close"){
+//                        $("#comments-btn").attr("state","open");
+//                        $("#comment-area").slideDown();
+//                    }
+//                    else{
+//                        $("#comments-btn").attr("state","close");
+//                        $("#comment-area").slideUp();
+//                    }
+//                })
+//    })
 </script>
