--- a/app/views/kpi_subscribes/new.html.erb
+++ b/app/views/kpi_subscribes/new.html.erb
@@ -31,7 +31,7 @@
         <%end%>
       </select>
       <input type='number' id="value" placeholder="<%= t 'subscription.add-sub.value'%>" />
-      <ul id="alert-list" style="margin: 5px">
+      <ul id="alert-list" style="margin: 5px;padding-left:16px;font-size:13px;color:#ef9f2c">
       </ul>
     </div>
 
