--- a/app/assets/stylesheets/kpi_subscribes.css.scss
+++ b/app/assets/stylesheets/kpi_subscribes.css.scss
@@ -10,24 +10,31 @@
           &:first-of-type{
             td{
               width:25%;
+              font-size:15px;
               &:nth-of-type(1){
-                  width:22%;
+                width:20%;
               }
               &:nth-of-type(2){
-                width:22%;
+                width:20%;
               }
               &:nth-of-type(3){
-                width:22%;
+                width:33%;
               }
               &:nth-of-type(4){
-                width:22%;
+                width:20%;
               }
               &:nth-of-type(5){
-                width:12%;
+                width:8%;
               }
               a.btn{
                 font-size:12px;
                 padding:5px 8px;
+              }
+              .subscribe-wrap{
+                span{
+                  display:block;
+                  color:#ef9f2c;
+                }
               }
             }
           }
