--- a/app/views/kpi_entries/analyse.html.erb
+++ b/app/views/kpi_entries/analyse.html.erb
@@ -287,6 +287,7 @@
   <input type="hidden" id="s_start_time" value="<%=@s_start_time%>"/>
   <input type="hidden" id="s_end_time" value="<%=@s_end_time%>"/>
   <input type="hidden" id="s_calculate_type" value="<%=@s_calculate_type%>"/>
+  <input type="hidden" id="s_interval" value="<%=@s_interval%>"/>
 </div>
 
 <% content_for :javascript_includes do %>
