--- a/app/views/users/_list.html.erb
+++ b/app/views/users/_list.html.erb
@@ -1,6 +1,6 @@
 <ul id="manage-sort-list" class="manage-sort-list">
   <% @users.each do |user| %>
-      <li id="<%= user.id %>" is_tenant="<%= user.is_tenant %>">
+      <li id="<%= user.id %>" is_tenant="<%= user.is_tenant %>" email="<%= user.email%>">
         <p class="sort-handle">:</p>
         <input type="checkbox"/>
         <table class="group">
