--- a/app/views/kpi_subscribes/_subscribes.html.erb
+++ b/app/views/kpi_subscribes/_subscribes.html.erb
@@ -1,77 +1,53 @@
-<!--<ul id="manage-sort-list" class="manage-sort-list">
-  <% @kpis.each do |kpi| %>
-      <li id="<%= kpi.id %>">
-        <table class="category" special="my-kpi">
-          <tr>
-            <td title='<%= kpi.name %>'><%= kpi.name %></td>
-            <td>
-              <div class="subscribe-wrap" style="width:100%;overflow-x:auto">
-                  <% kpi.kpi_subscribes.each do |ks| %>
-                    <span><%= ks.description %> <i value="<%= ks.id%>" class="icon icon-remove subscribe-remove"></i></span>
-                  <% end %>
-              </div>
-            </td>
-            <td>
-              <a class="btn btn-success" href="/kpi_subscribes/new/<%= kpi.id%>"><%= t 'subscription.add'%></a>
-            </td>
-          </tr>
-          <tr>
-            <td title='<%= kpi.description %>'><%= kpi.description %></td>
-            <td><%= t 'subscription.subscription'%></td>
-            <td></td>
-          </tr>
-        </table>
-      </li>
-  <% end if @kpis %>
-</ul>-->
-
 <ul id="manage-sort-list" class="manage-sort-list">
-  <% @kpi_subscribes.each do |ks|%>
-      <li id="<%= ks.id %>">
-        <table class="category" special="my-kpi">
-          <tr>
-            <% query = AnalyseService.chart_condition_filter(ks.chart_condition) %>
-            <td><%= ks.chart_condition.kpi.name %></td>
-            <td><%= ks.chart_condition.entity_group.name %></td>
-            <td><%= KpiEntriesHelper.parse_entry_date(query[:frequency],Time.parse(query[:start_time])) %> | <%= KpiEntriesHelper.parse_entry_date(query[:frequency],Time.parse(query[:end_time])) %></td>
-            <td>
-              <div class="subscribe-wrap" style="width:100%;overflow-x:auto">
-                <% ks.kpi_subscribe_alerts.each do |alert| %>
-                    <span><%= alert.display%></span>
+  <% @kpi_subscribes.each do |ks| %>
+      <a href="/kpi_entries/analyse?s=<%= ks.id %>">
+        <li id="<%= ks.id %>">
+          <table class="category" special="my-kpi">
+            <tr>
+              <% query = AnalyseService.chart_condition_filter(ks.chart_condition) %>
+              <td><%= ks.chart_condition.kpi.name %></td>
+              <td><%= ks.chart_condition.entity_group.name %></td>
+              <td><%= KpiEntriesHelper.parse_entry_date(query[:frequency], Time.parse(query[:start_time])) %>
+                | <%= KpiEntriesHelper.parse_entry_date(query[:frequency], Time.parse(query[:end_time])) %></td>
+              <td>
+                <div class="subscribe-wrap" style="width:100%;overflow-x:auto">
+                  <% ks.kpi_subscribe_alerts.each do |alert| %>
+                      <span><%= alert.display %></span>
+                  <% end %>
+                </div>
+              </td>
+              <td>
+                <% if ks.is_alert %>
+                    <a class="btn btn-danger"><%= t 'subscription.add-sub.alert' %></a>
                 <% end %>
-              </div>
-            </td>
-            <td>
-              <% if ks.is_alert %>
-                  <a class="btn btn-danger"><%= t 'subscription.add-sub.alert'%></a>
-              <% end %>
-            </td>
-          </tr>
-          <tr>
-            <td><%= t 'subscription.kpi'%></td>
-            <td><%= t 'subscription.add-sub.department'%></td>
-            <td><%= t 'subscription.add-sub.time'%></td>
-            <td><%= t 'subscription.add-sub.alert_type'%></td>
-            <td></td>
-          </tr>
-        </table>
-      </li>
-  <%end%>
+              </td>
+            </tr>
+            <tr>
+              <td><%= t 'subscription.kpi' %></td>
+              <td><%= t 'subscription.add-sub.department' %></td>
+              <td><%= t 'subscription.add-sub.time' %></td>
+              <td><%= t 'subscription.add-sub.alert_type' %></td>
+              <td></td>
+            </tr>
+          </table>
+        </li>
+      </a>
+  <% end %>
 </ul>
 
 <script>
-  $(document).ready(function(){
-       $("body")
-               .on("click",".subscribe-remove",function(event){
-                    var target=adapt_event(event).target;
-                   MANAGE.kpi_subscribe.destroy($(target).attr("value"),function(data){
-                       if(data.result){
-                           $(target).parent().remove();
-                       }else{
+    $(document).ready(function () {
+        $("body")
+                .on("click", ".subscribe-remove", function (event) {
+                    var target = adapt_event(event).target;
+                    MANAGE.kpi_subscribe.destroy($(target).attr("value"), function (data) {
+                        if (data.result) {
+                            $(target).parent().remove();
+                        } else {
 
-                       }
-                   });
-               })
-  })
+                        }
+                    });
+                })
+    })
 </script>
 
