--- a/app/assets/stylesheets/story_sets.css.scss
+++ b/app/assets/stylesheets/story_sets.css.scss
@@ -139,6 +139,36 @@
       height:50%;
       width:100%;
       padding:8px 6px 0;
+      .title{
+        font-size:20px;
+        padding-top:16px;
+        padding-bottom:5px;
+        color:$nav-dark;
+        border-bottom:1px solid rgba(0,0,0,0.3);
+      }
+      .item{
+        display:table;
+        width:100%;
+        padding:7px 0px 7px 3px;
+        background:#fff;
+        border-bottom:1px dashed rgba(0,0,0,0.2);
+        &>p{
+          font-size:13px;
+          display:table-cell;
+          &:first-of-type{
+            vertical-align:middle;
+            color:#16ca9e;
+          }
+          &:last-of-type{
+            width:80px;
+            text-align: right;
+            padding-right:5px;
+            font-size:11px;
+            color:#777;
+            vertical-align:bottom;
+          }
+        }
+      }
     }
 
   }
