--- a/app/views/story_sets/story.html.erb
+++ b/app/views/story_sets/story.html.erb
@@ -13,7 +13,7 @@
     <div class="holder">
       <div class="avatar">
         <a>
-          <image src='<%= @story_set.user.image_url %>' width='60px'/>
+          <image src='/files/avatar?f=<%= @story_set.user.image_url %>' width='60px'/>
         </a>
       </div>
       <div class="title">
@@ -32,7 +32,7 @@
           <div class="item show-story-detail-item" story='<%= story.id %>'>
             <div class="avatar">
               <a>
-                <image src='<%= story.user_avatar %>' width='50px'/>
+                <image src='/files/avatar?f=<%= story.user_avatar %>' width='50px'/>
               </a>
             </div>
             <div class="title">
@@ -44,9 +44,6 @@
                 <span><%= time_ago_in_words(story.created_at.localtime) %></span><span>comment_count: <%= story.comment_count %></span>
               </p>
             </div>
-            <!--<div class="btn-area">-->
-            <!--<a class="btn btn-primary show-story-detail-a" story='<%= story.id %>'>check</a>-->
-            <!--</div>-->
           </div>
       <% end %>
     </div>
