--- a/app/views/stories/_detail.html.erb
+++ b/app/views/stories/_detail.html.erb
@@ -12,8 +12,8 @@
             <div class="attachment-item inline-block" title="<%= attach.name %>">
               <div class="attachment-sign atta-<%= attach.type %>" href="/files/attach?f=<%= attach.path %>">
                 <a href="/files/attach?f=<%= attach.path %>" class='attach-download' target="_blank">
-                  <div class="attachment-operate">
-                  <i class="icon-arrow-down icon-white pointer pull-right"></i>
+                  <div class="attachment-operate" style="background:#000;text-align:center">
+                   <p style="text-align:center;margin:0px;font-size:10px;color:#fff">download</p>
                   </div>
                 </a>
               </div>
