--- a/app/assets/stylesheets/story_sets.css.scss
+++ b/app/assets/stylesheets/story_sets.css.scss
@@ -181,10 +181,12 @@
   margin:40px auto 0;
   height:70%;
   overflow-y:auto;
+  border:1px solid rgba(0,0,0,0.2);
   &>p{
     padding:14px 16px;
     font-size:24px;
-    color:$nav-dark;
+    color:#fff;
+    background:$nav-dark;
     margin:0px;
   }
   .divide{
