--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,19 +26,19 @@
 <script type="text/javascript">
     I18n.defaultLocale = "<%= I18n.default_locale %>";
     I18n.locale = "<%= I18n.locale %>";
-//    $.ajaxSetup({
-//        statusCode: {
-//            403: function () {
-//                location.href = '/403';
-//            },
-//            404: function () {
-//                location.href = '/404';
-//            },
-//            500: function () {
-//                location.href = '/500';
-//            }
-//        }
-//    });
+    $.ajaxSetup({
+        statusCode: {
+            403: function () {
+                location.href = '/403';
+            },
+            404: function () {
+                location.href = '/404';
+            },
+            500: function () {
+                location.href = '/500';
+            }
+        }
+    });
     var old_message = null;
     (function callmessage() {
         setTimeout(function () {
@@ -88,7 +88,7 @@
                     if (xhr.status == 304) return;
                 }
             });
-        }, 500000);
+        }, 5000);
     })();
 </script>
 <%= yield :javascript_includes %>
