--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -17,8 +17,8 @@
   <% @users.each_with_index do |c, i| %>
       <tr>
         <td><%= i+1 %></td>
-        <td><a href='<%= c.image_url %>' style="width: 50px;height: 50px;" class="avatar">
-          <img src='<%= c.image_url %>' style="width: 50px;height: 50px;"/>
+        <td><a href='/files/avatar?f=<%= c.image_url %>' style="width: 50px;height: 50px;" class="avatar">
+          <img src='/files/avatar?f=<%= c.image_url %>' style="width: 50px;height: 50px;"/>
         </a></td>
         <td><%= c.id %></td>
         <td><%= c.name %></td>
